force-app/main/default/objects/Title_and_Product_Group_Mapping__c/Title_and_Product_Group_Mapping__c.object-meta.xml
<CustomObject>
    <label>Title and Product Group Mapping</label>
    <nameField>
        <displayFormat>TPG-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Title and Product Group Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>