force-app/main/default/objects/Title_and_Product_Group_Mapping__c/fields/Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Group__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Group</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>