force-app/main/default/objects/Title_and_Product_Group_Mapping__c/fields/Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>Unique_Key__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Unique Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>