force-app/main/default/objects/Title_and_Product_Group_Mapping__c/validationRules/Prevent_Change_Product_Group.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Change_Product_Group</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Product_Group__c)</errorConditionFormula>
    <errorDisplayField>Product_Group__c</errorDisplayField>
    <errorMessage>Product Group Name can not be changed, Please inactive the record and create new product group.</errorMessage>
</ValidationRule>