force-app/main/default/objects/Title_and_Product_Group_Mapping__c/validationRules/Prevent_Change_Title.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Change_Title</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Title__c)</errorConditionFormula>
    <errorDisplayField>Title__c</errorDisplayField>
    <errorMessage>Title can not be changed, Please inactive the record and create new title.</errorMessage>
</ValidationRule>